fix failing tests, mark objects as dirty when modifying collections or state of DBO in MongoDB