@@ -27,3 +27,13 @@ sourceSets {
         compileClasspath += configurations.grails
     }
 }
+
+//test {
+//    if (System.getProperty('debug', 'false') == 'true') {
+//        jvmArgs '-server','-Xmx2048M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m', '-Xdebug',
+//                '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005'
+//    }
+//    else {
+//        jvmArgs '-server','-Xmx2048M', '-Xms64M', '-XX:PermSize=32m','-XX:MaxPermSize=256m'
+//    }
+//}
